test/files/neg/t5821.check
t5821.scala:1: error: not found: object SthImportant
import SthImportant._
       ^
one error found
